--- a/views/index.erb
+++ b/views/index.erb
@@ -2,13 +2,13 @@
 <form action="/game">
 
   <div class="form-group">
-    <label for="game">Choose either rock, paper or scissor!</label>
-     <input id="game" name="game" class="form-control" type="text">
+    <label for="player1">Player 1:</label>
+     <input id="player1" name="player1input" class="form-control" type="text">
   </div>
 
   <div class="form-group">
-    <label for="game">Choose either rock, paper or scissor!</label>
-    <input id="game" name="game" class="form-control" type="text">
+    <label for="player2">Player 2:</label>
+    <input id="player2" name="player2input" class="form-control" type="text">
   </div>
 
   <button type="submit" class="btn-success">Send</button>
